--- a/package.json
+++ b/package.json
@@ -19,7 +19,12 @@
   "homepage": "https://github.com/mikelearning91/friendFinder#readme",
   "dependencies": {
     "body-parser": "^1.17.1",
+    "busboy": "^0.2.14",
+    "connect-busboy": "0.0.2",
     "express": "^4.15.2",
+    "formidable": "^1.1.1",
+    "fs": "0.0.1-security",
+    "fs-extra": "^2.1.2",
     "mysql": "^2.13.0",
     "nodemon": "^1.11.0",
     "path": "^0.12.7"
